Added http-relay example.

--- a/redsocks-full.conf
+++ b/redsocks-full.conf
@@ -26,6 +26,14 @@ redsocks {
 	login = foo;
 	password = bar;
 }
+
+redsocks {
+	// login & password are ignored
+	local_port = 12345;
+	ip = 127.0.0.1;
+	port = 3128;
+	type = http-relay;
+}
 */
 
 
