Update redsocks.conf samples.

--- a/debian/redsocks.conf
+++ b/debian/redsocks.conf
@@ -42,6 +42,8 @@ redsocks {
 	local_port = 12345;
 
 	// `ip' and `port' are IP and tcp-port of proxy-server
+	// You can also use hostname instead of IP, only one (random)
+	// address of multihomed host will be used.
 	ip = 127.0.0.1;
 	port = 1080;
 
