--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -45,7 +45,13 @@ redsocks {
 
 	// listen() queue length. Default value is SOMAXCONN and it should be
 	// good enough for most of us.
-	// listenq = 128;
+	// listenq = 128; // SOMAXCONN equals 128 on my Linux box.
+
+	// `max_accept_backoff` is a delay to retry `accept()` after accept
+	// failure (e.g. due to lack of file descriptors). It's measured in
+	// milliseconds and maximal value is 65535. Setting it to zero leads to
+	// busy-loop.
+	// max_accept_backoff = 60000;
 
 	// `ip' and `port' are IP and tcp-port of proxy-server
 	// You can also use hostname instead of IP, only one (random)
