Implement better exponential backoff in case of `accept()` failure.
This commit implements two more features:
 * min_accept_backoff configuration option
 * retry accept() after some close() calls

See also https://github.com/darkk/redsocks/issues/19

--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -49,8 +49,10 @@ redsocks {
 
 	// `max_accept_backoff` is a delay to retry `accept()` after accept
 	// failure (e.g. due to lack of file descriptors). It's measured in
-	// milliseconds and maximal value is 65535. Setting it to zero leads to
-	// busy-loop.
+	// milliseconds and maximal value is 65535. `min_accept_backoff` is
+	// used as initial backoff value and as a damper for `accept() after
+	// close()` logic.
+	// min_accept_backoff = 100;
 	// max_accept_backoff = 60000;
 
 	// `ip' and `port' are IP and tcp-port of proxy-server
