--- a/redsocks.service
+++ b/redsocks.service
@@ -3,13 +3,13 @@ Description=Transparent redirector of any TCP connection to proxy using your fir
 
 [Service]
 Type=forking
-PIDFile=/var/run/redsocks/redsocks.pid
+PIDFile=/run/redsocks/redsocks.pid
 EnvironmentFile=/etc/conf.d/redsocks
+User=redsocks
 ExecStartPre=/usr/bin/redsocks -t -c $REDSOCKS_CONF
-ExecStart=/bin/su -s /bin/sh -c "/usr/bin/redsocks \
-  -c $REDSOCKS_CONF \
-  -p /var/run/redsocks/redsocks.pid" redsocks
-ExecStopPost=/bin/rm /var/run/redsocks/redsocks.pid
+ExecStart=/usr/bin/redsocks -c $REDSOCKS_CONF \
+  -p /run/redsocks/redsocks.pid
+ExecStopPost=/bin/rm /run/redsocks/redsocks.pid
 Restart=on-abort
 
 [Install]
