--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -112,12 +112,18 @@ redudp {
 	udp_timeout_stream = 180;
 }
 
-dnstc {
-	// fake and really dumb DNS server that returns "truncated answer" to
-	// every query via UDP, RFC-compliant resolver should repeat same query
-	// via TCP in this case.
-	local_ip = 127.0.0.1;
-	local_port = 5300;
+tcpdns {
+	// Transform UDP DNS requests into TCP DNS requests.
+	// You can also redirect connections to external TCP DNS server to
+	// REDSOCKS transparent proxy via iptables.
+	local_ip = 192.168.1.1; // Local server to act as DNS server
+	local_port = 1053;      // UDP port to receive UDP DNS requests
+	tcpdns1 = 8.8.4.4;      // DNS server that supports TCP DNS requests
+	tcpdns2 = 8.8.8.8;      // DNS server that supports TCP DNS requests
+	timeout = 4;            // Timeout value for TCP DNS requests
 }
 
+
 // you can add more `redsocks' and `redudp' sections if you need.
+
+
