--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -129,6 +129,10 @@ autoproxy {
                                  // is found blocked in cache and it has been
                                  // added into cache no earlier than this
                                  // specified number of seconds.
+                                 // Set it to 0 if you do not want to perform
+                                 // quick check when an IP is found in blocked
+                                 // IP cache, thus the connection will be
+                                 // redirected to proxy immediately.
     quick_connect_timeout = 3;   // Timeout value when performing quick
                                  // connection check if an IP is found blocked
                                  // in cache.
@@ -138,8 +142,14 @@ ipcache {
     // Configure IP cache
     cache_size = 4;   // Maximum number of IP's in 1K. 
     stale_time = 900; // Seconds to stale an IP in cache since it is added
-                      // into cahce
+                      // into cahce.
+                      // Set it to 0 to disable cache stale.
     port_check = 1;   // Whether to distinguish port number in address
+    cache_file = "/tmp/ipcache.txt"; // File used to store blocked IP's in cache.
+    autosave_interval = 3600; // Interval for saving ip cache into file.
+                              // Set it to 0 to disable autosave.
+    // When autosave_interval and stale_time are both 0, IP cache behaves like
+    // a static blacklist. 
 }
 
 // you can add more `redsocks' and `redudp' sections if you need.
