logging: respect log_debug for non-syslog `log', SIGUSR1 writes LOG_NOTICE
log_debug and log_info should not waste CPU and disk space while logging
to file and stderr, but SIGUSR1 dump is explicit request, so it's always
logged.

--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -1,6 +1,6 @@
 base {
-	// debug: connection progress & client list on SIGUSR1
-	log_debug = on;
+	// debug: connection progress
+	log_debug = off;
 
 	// info: start and end of client session
 	log_info = on;
