Prepend original client address to SOCKS4 login
This change allows redsocks to put the original client address
into the username field of a SOCKS4 address, making it available
to the forwarding server.

--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -77,6 +77,11 @@ redsocks {
 
 	// login = "foobar";
 	// password = "baz";
+
+	// prepend the originating host to login name (only with SOCKS4):
+	// 1: prepend address;
+	// 2: prepend address:port;
+	login_send_origin = 0;
 }
 
 redudp {
