Add tests for authentication failure

--- a/tests/regw/redsocks.conf
+++ b/tests/regw/redsocks.conf
@@ -51,3 +51,59 @@ redsocks {
     login = sockusr;
     password = sockpwd;
 }
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12345;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12346;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+    login = luser;
+    password = digest_password;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12347;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+    login = digest_user;
+    password = buzzword;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12348;
+    ip = 10.0.1.181;
+    port = 1081;
+    type = socks5;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12349;
+    ip = 10.0.1.181;
+    port = 1081;
+    type = socks5;
+    login = luser;
+    password = sockpwd;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12350;
+    ip = 10.0.1.181;
+    port = 1081;
+    type = socks5;
+    login = sockusr;
+    password = buzzword;
+}
