Add `on_proxy_fail` to inform user's browser about sort of failure
Use the feature with care, enable it only for HTTP port to avoid
confusion, no client protocol detection is done at the moment.

--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -89,6 +89,11 @@ redsocks {
 	//  Forwarded_ip     -- Forwarded: for=IP # see RFC7239
 	//  Forwarded_ipport -- Forwarded: for="IP:port" # see RFC7239
 	// disclose_src = false;
+
+	// various ways to handle proxy failure
+	//  close -- just close connection (default)
+	//  forward_http_err -- forward HTTP error page from proxy as-is
+	// on_proxy_fail = close;
 }
 
 redudp {
