--- a/tests/regw/redsocks.conf
+++ b/tests/regw/redsocks.conf
@@ -107,3 +107,45 @@ redsocks {
     login = sockusr;
     password = buzzword;
 }
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12351;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+    on_proxy_fail = forward_http_err;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12352;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+    login = luser;
+    password = digest_password;
+    on_proxy_fail = forward_http_err;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12353;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+    login = digest_user;
+    password = buzzword;
+    on_proxy_fail = forward_http_err;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12354;
+    ip = 10.0.1.9;
+    port = 8081;
+    type = http-connect;
+    login = digest_user;
+    password = digest_password;
+    on_proxy_fail = forward_http_err;
+}
