--- a/tests/regw/redsocks.conf
+++ b/tests/regw/redsocks.conf
@@ -4,6 +4,7 @@ base {
     log = stderr;
     daemon = off;
     redirector = iptables;
+    redsocks_conn_max = 8;
 }
 
 redsocks {
@@ -147,5 +148,23 @@ redsocks {
     type = http-connect;
     login = digest_user;
     password = digest_password;
+    on_proxy_fail = forward_http_err;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12355;
+    ip = 10.0.1.9;
+    port = 1;
+    type = http-connect;
+    on_proxy_fail = forward_http_err;
+}
+
+redsocks {
+    local_ip = 0.0.0.0;
+    local_port = 12356;
+    ip = 10.0.1.66;
+    port = 66;
+    type = http-connect;
     on_proxy_fail = forward_http_err;
 }
