--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -73,13 +73,13 @@ redsocks {
 	port = 1080;
 
 	// known types: socks4, socks5, http-connect, http-relay
-	// New types: direct, shadowsocks
+	// New types: direct, shadowsocks, https-connect
 	type = socks5;
 
-    // Specify interface for outgoing connections.
-    // This is useful when you have multiple connections to
-    // internet or when you have VPN connections.
-    // interface = tun0;
+	// Specify interface for outgoing connections.
+	// This is useful when you have multiple connections to
+	// internet or when you have VPN connections.
+	// interface = tun0;
 
 	// Change this parameter to 1 if you want auto proxy feature. 
 	// When autoproxy is set to non-zero, the connection to target
