Rename Linux filtering method to netfilter
We are using SO_ORIGINAL_DST for getting the destination address on
Linux. Since it is defined by netfilter subsystem it is common to both
iptables and the newer nftables.

Let's rename define and the method name to denote we are using netfilter
API and then provide handy aliases for "redirector" backwards
compatibility.

--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -30,12 +30,12 @@ base {
 	// chroot = "/var/chroot";
 
 	/* possible `redirector' values are:
-	 *   iptables   - for Linux
+	 *   netfilter  - for Linux
 	 *   ipf        - for FreeBSD
 	 *   pf         - for OpenBSD
 	 *   generic    - some generic redirector that MAY work
 	 */
-	redirector = iptables;
+	redirector = netfilter;
 
 	/* Override per-socket values for TCP_KEEPIDLE, TCP_KEEPCNT,
 	 * and TCP_KEEPINTVL. see man 7 tcp for details.
