--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -73,11 +73,18 @@ redsocks {
 	// max_accept_backoff = 60000;
 
 	// `ip' and `port' are IP and tcp-port of proxy-server
-	// You can also use hostname instead of IP, only one (random)
-	// address of multihomed host will be used.
-	// The two fields are meaningless when proxy type is 'direct'.
-	ip = example.org;
-	port = 1080;
+	// These two parameters are removed to support IPv6.
+
+	// `relay' is IP address and port of proxy-server. Domain name is not
+	// supported yet.
+	// Can be:
+	//     [IPv6Address]:port
+	//     [IPv6Address]
+	//     IPv6Address
+	//     IPv4Address:port
+	//     IPv4Address
+	// If no port is given, 0 is used. Usually, a valid port is required.
+	relay = "127.0.0.1:1080";
 
 	// known types: socks4, socks5, http-connect, http-relay
 	// New types: direct, shadowsocks, https-connect
