--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -53,12 +53,11 @@ base {
 }
 
 redsocks {
-	/* `local_ip' defaults to 127.0.0.1 for security reasons,
+	/* `bind' defaults to 127.0.0.1:0 for security reasons,
 	 * use 0.0.0.0 if you want to listen on every interface.
-	 * `local_*' are used as port to redirect to.
+	 * `bind' are used as ip:port to redirect to.
 	 */
-	local_ip = 127.0.0.1;
-	local_port = 12345;
+	bind = "127.0.0.1:12345";
 
 	// listen() queue length. Default value is SOMAXCONN and it should be
 	// good enough for most of us.
@@ -71,9 +70,6 @@ redsocks {
 	// close()` logic.
 	// min_accept_backoff = 100;
 	// max_accept_backoff = 60000;
-
-	// `ip' and `port' are IP and tcp-port of proxy-server
-	// These two parameters are removed to support IPv6.
 
 	// `relay' is IP address and port of proxy-server. Domain name is not
 	// supported yet.
@@ -113,15 +109,13 @@ redsocks {
 }
 
 redudp {
-	// `local_ip' should not be 0.0.0.0 as it's also used for outgoing
+	// `bind' should not be 0.0.0.0:0 as it's also used for outgoing
 	// packets that are sent as replies - and it should be fixed
 	// if we want NAT to work properly.
-	local_ip = 127.0.0.1;
-	local_port = 10053;
+	bind = "127.0.0.1:10053";
 
-	// `ip' and `port' of socks5 proxy server.
-	ip = 10.0.0.1;
-	port = 1080;
+	// `relay' is ip and port of socks5 proxy server.
+	relay = "10.0.0.1:1080";
 	login = username;// field 'login' is reused as encryption
 					   // method of shadowsocks
 	password = pazzw0rd;
@@ -133,12 +127,10 @@ redudp {
 	// linux: TPROXY and REDIRECT.  TPROXY requires more complex routing
 	// configuration and fresh kernel (>= 2.6.37 according to squid
 	// developers[1]) but has hack-free way to get original destination
-	// address, REDIRECT is easier to configure, but requires `dest_ip` and
-	// `dest_port` to be set, limiting packet redirection to single
-	// destination.
+	// address, REDIRECT is easier to configure, but requires `dest`
+	// to be set, limiting packet redirection to single destination.
 	// [1] http://wiki.squid-cache.org/Features/Tproxy4
-	dest_ip = 8.8.8.8;
-	dest_port = 53;
+	dest = "8.8.8.8:53";
 
 	// Do not set it large if this section is for DNS requests. Otherwise,
 	// you may encounter out of file descriptor problem. For DNS requests,
@@ -151,13 +143,10 @@ tcpdns {
 	// Transform UDP DNS requests into TCP DNS requests.
 	// You can also redirect connections to external TCP DNS server to
 	// REDSOCKS transparent proxy via iptables.
-	local_ip = 192.168.1.1; // Local server to act as DNS server
-	local_port = 1053;      // UDP port to receive UDP DNS requests
-	tcpdns1 = 8.8.4.4;      // DNS server that supports TCP DNS requests
-	tcpdns1_port = 53;      // DNS server port, default 53
-	tcpdns2 = 8.8.8.8;      // DNS server that supports TCP DNS requests
-	tcpdns2_port = 53;      // DNS server port, default 53
-	timeout = 4;            // Timeout value for TCP DNS requests
+	bind = "192.168.1.1:1053"; // Local server to act as DNS server
+	tcpdns1 = "8.8.4.4:53";    // DNS server that supports TCP DNS requests
+	tcpdns2 = "8.8.8.8" ;      // DNS server that supports TCP DNS requests
+	timeout = 4;               // Timeout value for TCP DNS requests
 }
 
 autoproxy {
