--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,5 +9,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: install depends
+      run: apt install -y libevent-dev
     - name: make
       run: make DISABLE_SHADOWSOCKS=1
