--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -112,6 +112,10 @@ redsocks {
 	//  close -- just close connection (default)
 	//  forward_http_err -- forward HTTP error page from proxy as-is
 	// on_proxy_fail = close;
+
+	// parse hostname from TLS SNI extension,
+	// so that HTTP CONNECT can use hostname rather than IP address
+	// parse_sni_host = true;
 }
 
 redudp {
