--- a/redsocks.conf.example
+++ b/redsocks.conf.example
@@ -114,11 +114,13 @@ redsocks {
 	// on_proxy_fail = close;
 
 	// parse hostname from TLS SNI extension,
-	// so that HTTP CONNECT can use hostname rather than IP address
+	// so that HTTP CONNECT can use hostname rather than IP address.
+	// in this case, the hostname is supposed to be resoved remotely.
 	// parse_sni_host = true;
 
 	// parse hostname from plaintext HTTP Host header,
-	// so that HTTP CONNECT can use hostname rather than IP address
+	// so that HTTP CONNECT can use hostname rather than IP address.
+	// in this case, the hostname is supposed to be resoved remotely.
 	// parse_http_host = true;
 }
 
