--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: install depends
       run: |
-        sudo echo "deb http://security.ubuntu.com/ubuntu bionic-security main" >> /etc/apt/sources.list
+        echo "deb http://security.ubuntu.com/ubuntu bionic-security main" | sudo tee -a /etc/apt/sources.list
         sudo apt update
         sudo apt install -y libssl1.0-dev libevent-dev
     - name: Build
