--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -9,7 +9,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: install depends
       run: |
+        sudo apt update
+        sudo apt install -y gnupg2
         echo "deb http://security.ubuntu.com/ubuntu bionic-security main" | sudo tee -a /etc/apt/sources.list
+        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 3B4FE6ACC0B21F32
         sudo apt update
         sudo apt install -y libssl1.0-dev libevent-dev
     - name: Build
